# spirit-island-pbp

./: .dockerignore  .env.docker  .env.template  .gitignore  .gitmodules  Caddyfile  Dockerfile  README.md  TOU-PrivacyPolicy.md  bot.py  docker-compose.yaml  entrypoint.sh  manage.py  mypy.ini  pyproject.toml  requirements.txt  run-bot.sh  run.sh
.github/workflows/: django-test.yml  lint.yml  type-check.yml
hooks/: post-receive
island/: asgi.py  settings.py  urls.py  wsgi.py
pbf/: admin.py  api.py  apps.py  models.py  tests.py  views.py
pbf/management/commands/: check_cards.py  expveng.py  fix_presence.py  represence.py  seeddb.py  syncfracturedtime.py
pbf/migrations/: 0001_initial.py  0002_game_discord_channel.py  0002_gamelog_images.py  0003_alter_game_screenshot.py  0003_gameplayer_aspect.py  0004_add_exploratory_bringer.py  0004_alter_card_options_gameplayer_paid_this_turn_and_more.py  0004_presence.py  0005_alter_game_discord_channel.py  0005_gameplayer_gained_this_turn_presence_energy.py  0006_alter_gameplayer_discard_alter_gameplayer_hand_and_more.py  0006_presence_elements_alter_presence_energy.py  0007_gameplayer_starting_energy.py  0007_merge_20220126_0305.py  0008_alter_gameplayer_color.py  0008_gameplayer_color.py  0009_remove_gameplayer_notes.py  0010_alter_gameplayer_options.py  0011_game_discard_pile.py  0012_alter_game_discard_pile_alter_game_major_deck_and_more.py  0013_gameplayer_days.py  0014_alter_game_discord_channel.py  0015_alter_game_discord_channel.py  0016_game_created_at.py  0017_game_screenshot2.py  0018_gameplayer_permanent_air_gameplayer_permanent_animal_and_more.py  0019_alter_game_discord_channel.py  0020_gameplayer_name.py  0021_alter_game_discord_channel.py  0022_add_horizon_spirits.py  0023_add_nature_incarnate.py  0024_gameplayer_impending.py  0025_fix_costs.py  0026_auto_20230707_1348.py  0027_gameplayer_healing_alter_card_type.py  0028_auto_20230707_1440.py  0029_auto_20230711_1545.py  0030_auto_20230821_1615.py  0031_auto_20230904_1351.py  0032_auto_20240403_0102.py  (+37 more)
pbf/static/pbf/: dropdown.min.js  import-help.html  sipbp.css
pbf/templates/: base.html  color.html  deck_mods.html  discard_pile.html  elements.html  energy.html  energy_and_spirit_resource.html  game.html  host_draw.html  index.html  logs.html  name.html  player-with-image.html  player.html  power_deck.html  power_deck_setup.html  setup.html  spirit_specific_resource.html  tabs.html
systemd/: spirit-island-bot.service  spirit-island.service
